Fix gap

--- a/styles/Sponsors.module.css
+++ b/styles/Sponsors.module.css
@@ -11,7 +11,7 @@
 
 .wave {
   position: absolute;
-  top: 0;
+  top: -1px;
   left: 0;
   width: 100%;
   overflow: hidden;
